--- a/message/src/main/resources/application.yml
+++ b/message/src/main/resources/application.yml
@@ -6,5 +6,9 @@ spring:
     name: notehub-message
   data:
     mongodb:
-      port: 27017
       host: 120.77.176.55
+      port: 27017
+      database: notehub
+logging:
+  level:
+    org.springframework.data.mongodb.core: DEBUG
