--- a/message/pom.xml
+++ b/message/pom.xml
@@ -24,6 +24,15 @@
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
 
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-devtools</artifactId>
+			<optional>true</optional>
+			<scope>true</scope>
+		</dependency>
+
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-websocket</artifactId>
@@ -78,6 +87,7 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 				<configuration>
 					<mainClass>com.ecnu.haven.MessageApplication</mainClass>
+					<fork>true</fork>
 				</configuration>
 			</plugin>
 		</plugins>
