--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.1.8.RELEASE</version>
+		<version>2.2.2.RELEASE</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.ecnu.onion</groupId>
@@ -25,9 +25,7 @@
 
 	<properties>
 		<java.version>11</java.version>
-		<spring-cloud.version>Greenwich.SR3</spring-cloud.version>
-		<mysql.version>8.0.15</mysql.version>
-		<jjwt.version>0.9.0</jjwt.version>
+		<spring-cloud.version>Hoxton.SR1</spring-cloud.version>
 	</properties>
 
 	<dependencies>
@@ -55,13 +53,6 @@
 
 	<dependencyManagement>
 		<dependencies>
-
-			<!-- JWT依赖 -->
-			<dependency>
-				<groupId>io.jsonwebtoken</groupId>
-				<artifactId>jjwt</artifactId>
-				<version>${jjwt.version}</version>
-			</dependency>
 
 			<!-- SpringCloud依赖 -->
 			<dependency>
