--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,6 @@
 	<description>双创NoteHub项目</description>
 
 	<modules>
-		<module>eureka-server</module>
 		<module>graph</module>
 		<module>note-core</module>
         <module>search</module>
@@ -63,11 +62,12 @@
 				<scope>import</scope>
 			</dependency>
 
-			<!-- 数据源驱动 -->
 			<dependency>
-				<groupId>mysql</groupId>
-				<artifactId>mysql-connector-java</artifactId>
-				<version>${mysql.version}</version>
+				<groupId>com.alibaba.cloud</groupId>
+				<artifactId>spring-cloud-alibaba-dependencies</artifactId>
+				<version>2.1.0.RELEASE</version>
+				<type>pom</type>
+				<scope>import</scope>
 			</dependency>
 
 		</dependencies>
